# ShippingCloud

./: .gitignore  AUDIT-2026-07-17.md  REPORT-2026-07-20-night2.md  REPORT-2026-07-20.md  index.html  netlify.toml  package.json  shopify.app.toml  vite.config.js
claude/: API-STATUS.md  AUDIT-ROUND2.md  DB-STORAGE-AUDIT.md  DEVELOPER-API-SPEC.md  FIXLIST-2026-07-15.md  HANDOFF-2026-07-13-session2.md  HANDOFF-2026-07-13.md  HANDOFF-2026-07-14.md  HANDOFF-2026-07-15-session2.md  HANDOFF-2026-07-15.md  HANDOFF-2026-07-16.md  HANDOFF-2026-07-20-night2.md  HANDOFF-v390.md  HANDOFF-v394.md  MORNING-RUNDOWN.md  PERF-MOBILE-AUDIT.md  SECURITY-INCIDENT-RESPONSE.md  SECURITY-REVIEW.md  SHOPIFY-PUBLIC-APP.md  audit-2026-07-15-morning.md  audit-admin-portal.md  audit-api-competitive.md  audit-api-round2.md  audit-customer-leaks.md  audit-pricing.md  audit-regressions.md  audit-security.md  audit-ux.md
claude/deliverables/: Freightwire-Proposal-API-Spec.docx
claude/routines/: nightly-bug-hunt.md  nightly-qa-sweep.md  nightly-smoke-and-brand-and-mobile.md  weekday-health-check.md  weekly-improvement-ideas.md  weekly-shipping-insights.md
claude/tests/: README.md  api.mjs  boot.mjs  rates.mjs  regression.mjs  run.sh  smoke.mjs  totp.mjs
dist-admin/: index.html
dist-admin/assets/: index-DUB5ZSIX.js
dist-shiphub/: index.html
dist-shiphub/assets/: index-D1U0u7AD.js
fw-connector/: Cargo.toml  README.md  config.toml.example
fw-connector/src/: main.rs
public/: api-docs.html  privacy.html
scratchpad/: platform-audit.html  report.html
src/: App.jsx  main.jsx  quote.js
(+49 files in other folders)
