[package]
name = "fw-connector"
version = "0.1.0"
edition = "2021"
description = "FreightWire ShippingHub ↔ Full Circle ODBC connector (runs on the L'AGENCE Windows box)"

[dependencies]
# ODBC bindings — wraps the Windows ODBC driver manager (uses the ProvideX/Full Circle DSN).
odbc-api = "8"
# Outbound HTTPS only (firewall-friendly). rustls so there's no OpenSSL to install on Windows.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
